# CNN_Classification_Using_AIFES

./: .gitignore  MNIST_test_data.h  MNIST_test_data_label.h  MNIST_training_data_label.h  main.c  pyproject.toml  readme.md
CNN/: CNN.cbp  CNN.depend  CNN.layout
notebooks/: dataset_extraction.ipynb
src/: mnist_to_c.py
